--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@
             margin: 20px;
             font-size: 18px; /* Slightly larger font for better readability */
         }
+
+        #flagForm {
+            margin-top: 20px;
+        }
+        #flagInput {
+            padding: 10px;
+            font-size: 16px;
+        }
+        #submitFlag {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+        #result {
+            margin-top: 20px;
+            font-weight: bold;
+            font-size: 18px;
+        }
     </style>
 </head>
 <body>
@@ -43,8 +61,30 @@
     <div>
         <img src="Phone.jpeg" alt="Phone">
     </div>
+
+    <!-- Add this new section for flag submission -->
+    <div id="flagForm">
+        <input type="text" id="flagInput" placeholder="Enter the flag">
+        <button id="submitFlag">Submit Flag</button>
+    </div>
+    <div id="result"></div>
     <script>
         console.log("555 33 8 7777 6 33 33 8 88 7 333 777 444 33 66 3.66 33 8 555 444 333 999.2 7 7"); 
+
+                // Add this new script for flag validation
+        document.getElementById('submitFlag').addEventListener('click', function() {
+        const flagInput = document.getElementById('flagInput').value;
+        const correctFlag = "/youalmostfoundyourfriend"; // Make sure this matches your actual flag
+        const resultDiv = document.getElementById('result');
+        
+        if (flagInput === correctFlag) {
+            resultDiv.textContent = "Yay! You captured the flag!";
+            resultDiv.style.color = "green";
+        } else {
+            resultDiv.textContent = "Sorry, that's not the correct flag. Try again!";
+            resultDiv.style.color = "red";
+        }
+    });
     </script>
 </body>
 </html>
