--- a/index.html
+++ b/index.html
@@ -72,18 +72,34 @@
         console.log("555 33 8 7777 6 33 33 8 88 7 333 777 444 33 66 3.66 33 8 555 444 333 999.2 7 7"); 
 
                 // Add this new script for flag validation
-        document.getElementById('submitFlag').addEventListener('click', function() {
-        const flagInput = document.getElementById('flagInput').value;
-        const correctFlag = "/youalmostfoundyourfriend"; // Make sure this matches your actual flag
-        const resultDiv = document.getElementById('result');
+    //     document.getElementById('submitFlag').addEventListener('click', function() {
+    //     const flagInput = document.getElementById('flagInput').value;
+    //     const correctFlag = "/youalmostfoundyourfriend"; // Make sure this matches your actual flag
+    //     const resultDiv = document.getElementById('result');
         
-        if (flagInput === correctFlag) {
-            resultDiv.textContent = "Yay! You captured the flag!";
-            resultDiv.style.color = "green";
-        } else {
-            resultDiv.textContent = "Sorry, that's not the correct flag. Try again!";
-            resultDiv.style.color = "red";
-        }
+    //     if (flagInput === correctFlag) {
+    //         resultDiv.textContent = "Yay! You captured the flag!";
+    //         resultDiv.style.color = "green";
+    //     } else {
+    //         resultDiv.textContent = "Sorry, that's not the correct flag. Try again!";
+    //         resultDiv.style.color = "red";
+    //     }
+    // });
+    document.getElementById('submitFlag').addEventListener('click', function() {
+        const flagInput = document.getElementById('flagInput').value;
+        fetch('/.netlify/functions/validateFlag', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({ flag: flagInput })
+        })
+        .then(response => response.json())
+        .then(data => {
+            const resultDiv = document.getElementById('result');
+            resultDiv.textContent = data.message;
+            resultDiv.style.color = data.success ? "green" : "red";
+        });
     });
     </script>
 </body>
