--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         console.log("555 33 8 7777 6 33 33 8 88 7 333 777 444 33 66 3.66 33 8 555 444 333 999.2 7 7"); 
 
                 // Add this new script for flag validation
-
         document.getElementById('submitFlag').addEventListener('click', function() {
             const flagInput = document.getElementById('flagInput').value;
+            console.log("Flag submitted:", flagInput);  // Log the input
             fetch('/.netlify/functions/validateFlag', {
                 method: 'POST',
                 headers: {
@@ -87,7 +87,8 @@
                 const resultDiv = document.getElementById('result');
                 resultDiv.textContent = data.message;
                 resultDiv.style.color = data.success ? "green" : "red";
-            });
+            })
+            .catch(error => console.error('Error:', error));
         });
     </script>
 </body>
